--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>这是一个H1标题</h1>
     <div></div>
-
+    <a href="javascript:;"></a>
     <script src="./index.js"></script>
   </body>
 </html>
